# cell-automata

./: README.md
include/: app.h  grid.h
src/: CMakeLists.txt  app.cpp  grid.cpp  main.cpp
